<resources>
    <string name="app_name">LetsGo</string>
    <string name="slogan">Travel together!</string>
    <string name="login">Войти</string>
    <string name="signup">Зарегистрироваться</string>
    <string name="logo">LetsGO</string>
    <string name="name">Никнейм</string>
    <string name="phone">Телефон</string>
    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confPassword">Подтвердите пароль</string>
    <string name="age">Возраст</string>
    <string name="logTxt">Ваш логин</string>
    <string name="forgotPass">Восстановить пароль</string>
    <string name="passenger">Пассажир</string>
    <string name="driver">Водитель</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>