<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.StartFragmentKt">

    <androidx.cardview.widget.CardView
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@android:color/transparent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="28dp"
                android:layout_marginBottom="15dp"
                android:gravity="center"
                android:text="@string/logo"
                android:textColor="@color/logo_txt"
                android:textSize="50sp" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/log_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_gravity="bottom"
                android:layout_marginLeft="28dp"
                android:layout_marginRight="28dp"
                android:background="@drawable/btn_for_log"
                android:onClick="onClick"
                android:text="@string/login" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/reg_btn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="28dp"
                android:layout_marginBottom="28dp"
                android:background="@drawable/btn_for_reg"
                android:onClick="onClick"
                android:text="@string/signup" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>