<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:layout_marginBottom="32dp"
        android:gravity="center"
        android:layout_gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:id="@+id/sigin"
            android:padding="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/color_for_log">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/back_arrow"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/barrow"/>
                <TextView
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginLeft="16dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ВХОД"/>
            </LinearLayout>
        </FrameLayout>
        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/login_text"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:height="30dp"
                android:background="@drawable/fon_for_auth"
                android:gravity="center"
                android:hint="@string/logTxt"
                android:inputType="text" />

            <EditText
                android:id="@+id/pass_text"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:height="30dp"
                android:background="@drawable/fon_for_auth"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="50dp"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="left"
                    android:layout_marginTop="8dp"
                    android:gravity="left"
                    android:text="Ещё нет аккаунта?" />

                <TextView
                    android:id="@+id/regNowBtn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:layout_marginTop="8dp"
                    android:gravity="right|end"
                    android:text="Зарегистрируйтесь"
                    android:textStyle="bold" />
            </LinearLayout>


            <TextView
                android:id="@+id/loginSms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:gravity="end"
                android:text="Войти по SMS"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/forgPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|bottom"
                android:layout_marginTop="8dp"
                android:layout_marginRight="50dp"
                android:gravity="end|bottom"
                android:text="Забыли пароль?" />


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_log"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:background="@drawable/btn_for_log"
                android:text="@string/login"
                android:layout_marginBottom="8dp"
                android:textColor="@color/white" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>